--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>Game</title>
-  <link rel="stylesheet" type="text/css" href="game.css">
-
-  <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
-</head>
-<body>
-  <div id="game" >
-    <h5>Bullets {{ bulletsCounter }}</h5>
-
-    <div id="tank" :style="tankStyle">
-    </div>
-
-    <span v-for="bullet in bullets" v-bind:id="bullet.id" :style="{ bottom: bullet.bottom + 'px', right: bullet.right + 'px' }" class="bullet">
-    </span>
-  </div>
-
-  <script src="/game.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>tanks</title>
+  </head>
+  <body>
+    <div id="game"></div>
+    <script src="/dist/build.js"></script>
+  </body>
 </html>
